--- a/adonisgram/package.json
+++ b/adonisgram/package.json
@@ -23,6 +23,7 @@
     "@adonisjs/view": "^3.1.0",
     "luxon": "^1.25.0",
     "mysql": "^2.18.1",
+    "phc-argon2": "^1.0.11",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
